--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!doctype html>
 <html lang="en" style="scroll-behavior: smooth !important">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/download.jfif" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donation Hub</title>
+
+    <!-- SEO Title -->
+    <title>Donation Hub – Online Donations & NGO Support Platform</title>
+
+    <!-- SEO Meta -->
+    <meta
+      name="description"
+      content="Donation Hub is a trusted online donation platform where you can support NGOs, donate securely, and help people in need through verified campaigns."
+    />
+    <meta
+      name="keywords"
+      content="donation hub, online donation, donate money, NGO donation, charity platform, crowdfunding, zakat donation, sadqa"
+    />
+    <meta name="author" content="Donation Hub" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Donation Hub – Online Donations & NGO Support Platform"
+    />
+    <meta
+      property="og:description"
+      content="Donate securely, support verified NGOs, and make a real impact with Donation Hub."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://donationhub-aqib.vercel.app" />
+    <meta
+      property="og:image"
+      content="https://donationhub-aqib.vercel.app/og-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Donation Hub – Online Donations & NGO Support Platform"
+    />
+    <meta
+      name="twitter:description"
+      content="A secure platform to donate money online and support NGOs."
+    />
+    <meta
+      name="twitter:image"
+      content="https://donationhub-aqib.vercel.app/og-image.png"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/download.jfif" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
