--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!doctype html>
-<html lang="en" style="scroll-behavior: smooth !important">
+<html lang="en" style="scroll-behavior: smooth">
   <head>
-    <!-- Basic -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Title -->
-    <title>Donation Hub – Online Donations & NGO Support Platform</title>
+    <!-- PRIMARY SEO -->
+    <title>Donation Hub | Donate to Trusted NGOs in Pakistan</title>
 
-    <!-- SEO Meta -->
     <meta
       name="description"
-      content="Donation Hub is a trusted online donation platform where you can support NGOs, donate securely, and help people in need through verified campaigns."
+      content="Donation Hub is a trusted online donation platform in Pakistan. Donate to verified NGOs, support education, health, blood donation, food drives and emergency relief with full transparency."
     />
+
     <meta
       name="keywords"
-      content="donation hub, online donation, donate money, NGO donation, charity platform, crowdfunding, zakat donation, sadqa"
+      content="donation hub, donate online pakistan, ngo donation pakistan, charity website pakistan, donate to ngos, blood donation pakistan, zakat donation pakistan, sadqa donation pakistan, donation platform pakistan"
     />
+
     <meta name="author" content="Donation Hub" />
     <meta name="robots" content="index, follow" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph -->
+    <!-- CANONICAL -->
+    <link rel="canonical" href="https://donationhub-aqib.vercel.app/" />
+
+    <!-- OPEN GRAPH (Facebook / WhatsApp) -->
     <meta
       property="og:title"
-      content="Donation Hub – Online Donations & NGO Support Platform"
+      content="Donation Hub | Donate to Trusted NGOs in Pakistan"
     />
     <meta
       property="og:description"
-      content="Donate securely, support verified NGOs, and make a real impact with Donation Hub."
+      content="A better way to donate. Support verified NGOs and causes across Pakistan with transparency and trust."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://donationhub-aqib.vercel.app" />
@@ -37,23 +39,23 @@
       content="https://donationhub-aqib.vercel.app/og-image.png"
     />
 
-    <!-- Twitter -->
+    <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Donation Hub – Online Donations & NGO Support Platform"
-    />
+    <meta name="twitter:title" content="Donation Hub Pakistan" />
     <meta
       name="twitter:description"
-      content="A secure platform to donate money online and support NGOs."
+      content="Donate to verified NGOs in Pakistan with full transparency."
     />
     <meta
       name="twitter:image"
       content="https://donationhub-aqib.vercel.app/og-image.png"
     />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/download.jfif" />
+    <!-- FAVICON -->
+    <link rel="icon" href="/download.jfif" />
+
+    <!-- GOOGLE VERIFICATION (Search Console) -->
+    <!-- <meta name="google-site-verification" content="PASTE_CODE_HERE" /> -->
   </head>
 
   <body>
