--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
 
     <!-- PRIMARY SEO -->
-    <title>Donation Hub | Donate to Trusted NGOs in Pakistan</title>
+    <title>
+      Aqib Shabbir Donation Hub vercel App| Donate to Trusted NGOs in Pakistan
+    </title>
 
     <meta
       name="description"
@@ -26,7 +28,7 @@
     <!-- OPEN GRAPH (Facebook / WhatsApp) -->
     <meta
       property="og:title"
-      content="Donation Hub | Donate to Trusted NGOs in Pakistan"
+      content="Donation Hub vercel App| Donate to Trusted NGOs in Pakistan"
     />
     <meta
       property="og:description"
@@ -41,7 +43,10 @@
 
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Donation Hub Pakistan" />
+    <meta
+      name="twitter:title"
+      content="Donation Hub vercel App| Donate to Trusted NGOs in Pakistan"
+    />
     <meta
       name="twitter:description"
       content="Donate to verified NGOs in Pakistan with full transparency."
