--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8" />
 
     <!-- PRIMARY SEO -->
-    <title>
-      Aqib Shabbir Donation Hub vercel App| Donate to Trusted NGOs in Pakistan
-    </title>
+    <title>Donation Hub | Donate to Trusted NGOs in Pakistan</title>
 
     <meta
       name="description"
@@ -28,7 +26,7 @@
     <!-- OPEN GRAPH (Facebook / WhatsApp) -->
     <meta
       property="og:title"
-      content="Donation Hub vercel App| Donate to Trusted NGOs in Pakistan"
+      content="Donation Hub | Donate to Trusted NGOs in Pakistan"
     />
     <meta
       property="og:description"
@@ -43,10 +41,7 @@
 
     <!-- TWITTER -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      name="twitter:title"
-      content="Donation Hub vercel App| Donate to Trusted NGOs in Pakistan"
-    />
+    <meta name="twitter:title" content="Donation Hub Pakistan" />
     <meta
       name="twitter:description"
       content="Donate to verified NGOs in Pakistan with full transparency."
