google verification link

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <!-- FAVICON -->
     <link rel="icon" href="/download.jfif" />
 
-    <!-- GOOGLE VERIFICATION (Search Console) -->
-    <!-- <meta name="google-site-verification" content="PASTE_CODE_HERE" /> -->
+    <meta
+      name="google-site-verification"
+      content="rO8PJ02uWEjkxBzv_BWVFbeaK83vg2kCORJGLS_4zUI"
+    />
   </head>
 
   <body>
