google verification link

--- a/index.html
+++ b/index.html
@@ -13,51 +13,36 @@
 
     <meta
       name="keywords"
-      content="donation hub, donate online pakistan, ngo donation pakistan, charity website pakistan, donate to ngos, blood donation pakistan, zakat donation pakistan, sadqa donation pakistan, donation platform pakistan"
+      content="donation hub, donate online pakistan, ngo donation pakistan, charity website pakistan"
     />
 
     <meta name="author" content="Donation Hub" />
     <meta name="robots" content="index, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- CANONICAL -->
     <link rel="canonical" href="https://donationhub-aqib.vercel.app/" />
 
-    <!-- OPEN GRAPH (Facebook / WhatsApp) -->
-    <meta
-      property="og:title"
-      content="Donation Hub | Donate to Trusted NGOs in Pakistan"
-    />
-    <meta
-      property="og:description"
-      content="A better way to donate. Support verified NGOs and causes across Pakistan with transparency and trust."
-    />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://donationhub-aqib.vercel.app" />
-    <meta
-      property="og:image"
-      content="https://donationhub-aqib.vercel.app/og-image.png"
-    />
-
-    <!-- TWITTER -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Donation Hub Pakistan" />
-    <meta
-      name="twitter:description"
-      content="Donate to verified NGOs in Pakistan with full transparency."
-    />
-    <meta
-      name="twitter:image"
-      content="https://donationhub-aqib.vercel.app/og-image.png"
-    />
-
-    <!-- FAVICON -->
-    <link rel="icon" href="/download.jfif" />
-
+    <!-- Google Search Console -->
     <meta
       name="google-site-verification"
       content="rO8PJ02uWEjkxBzv_BWVFbeaK83vg2kCORJGLS_4zUI"
     />
+
+    <!-- ✅ Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K6DRWPKY67"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-K6DRWPKY67");
+    </script>
+
+    <link rel="icon" href="/download.jfif" />
   </head>
 
   <body>
